# glMath

./: CMakeLists.txt
src/: CMakeLists.txt  mat.h  vec.h
tests/: CMakeLists.txt  matTests.cpp  vecTests.cpp
